add empty integrated bib in tex file

--- a/presentation.tex
+++ b/presentation.tex
@@ -302,16 +302,16 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-  \frametitle{Livres et articles sur Android et sa sécurité}
-  \begin{itemize}
-    \item Nikolay Elenkov,  {\it Android Security Internals: An In-Depth Guide to Android's
-      Security Architecture} - No starch press, 2015, ISBN : 978-1-59327-581-1
-    \item W. Confer \& W. Roberts, {\it Exploring SE for Android} - PACKT publishing, 2015,
-  ISBN: 978-1-78439-059-4
-\item André Moulu, {\it Sécurité des applications Android constructeurs et construction
-  de backdoors ciblées} - Actes du SSTIC 2013
-\item Nicolas Ruff, {\it Sécurité du système Android} - Actes du SSTIC 2011
-  \end{itemize}
+%  \frametitle{Livres et articles sur Android et sa sécurité}
+%  \begin{itemize}
+%    \item Nikolay Elenkov,  {\it Android Security Internals: An In-Depth Guide to Android's
+%      Security Architecture} - No starch press, 2015, ISBN : 978-1-59327-581-1
+%    \item W. Confer \& W. Roberts, {\it Exploring SE for Android} - PACKT publishing, 2015,
+%  ISBN: 978-1-78439-059-4
+%\item André Moulu, {\it Sécurité des applications Android constructeurs et construction
+%  de backdoors ciblées} - Actes du SSTIC 2013
+%\item Nicolas Ruff, {\it Sécurité du système Android} - Actes du SSTIC 2011
+%  \end{itemize}
 \end{frame}
 
 \backupend
