updated MCS subtitle

--- a/presentation.tex
+++ b/presentation.tex
@@ -190,7 +190,7 @@
 \end{frame}
 
 
-\subsection{Quelques exemples d'outils}
+\subsection{Quelques exemples d'outils Open-Source}
 \subsubsection{Recherche de vulnérabilité}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
