--- a/Packages/beamerthemeLACSC.sty
+++ b/Packages/beamerthemeLACSC.sty
@@ -200,10 +200,7 @@
 	classoffset=3,
 	morekeywords={\verb+@+param,\verb+@+return,brief,arg},
 	keywordstyle={\color{green}},
-	classoffset=0
-	%morecomment=*[n][\itshape]{/*}{*/},
-	% generals
-	basicstyle=\tiny,
+	classoffset=0,
 	numbers=left,
 	numberstyle=\tiny,
 	stepnumber=1,
@@ -214,6 +211,9 @@
 	breaklines=true,
 	captionpos=b
 }
+
+	%morecomment=*[n][\itshape]{/*}{*/},
+	% generals
 
 % encapsulating alt command in order to avoid to write to times the text.
 % first arg is the slide on which the red color is used, the second arg is
