--- a/presentation.tex
+++ b/presentation.tex
@@ -395,7 +395,7 @@ Lynis security scan details:
       Technology)
     }
     \only<2>{
-    \item Le NIST défini alors un ensemble de standard:
+    \item Le NIST définit alors un ensemble de standard:
       \begin{itemize}
         \item Les {\it CVE} (Common Vulnerability Exposure), formalisant une
           vulnérabilité
